--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,8 @@
-blinker==1.9.0
-click==8.1.8
-contourpy==1.3.0
-cycler==0.12.1
-filelock==3.18.0
-Flask==3.1.1
-fonttools==4.59.0
-fsspec==2025.7.0
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.1
-kiwisolver==1.4.7
-MarkupSafe==3.0.2
-matplotlib==3.9.4
-mpmath==1.3.0
-networkx==3.2.1
-numpy==1.26.4
-packaging==25.0
 pandas==2.3.1
-pillow==11.3.0
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-pytz==2025.2
-scikit-learn==1.5.1
-scipy==1.10.1
-six==1.17.0
-sympy==1.14.0
-threadpoolctl==3.6.0
-torch==2.7.1
-torchvision==0.22.1
+Flask==3.1.2
+torch==2.8.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 typing_extensions==4.14.1
-tzdata==2025.2
-Werkzeug==3.1.3
-zipp==3.23.0
+numpy==1.26.4
+joblib==1.4.2
+scikit-learn
